welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:11: error: ')' expected but 'while' found.
	while(!estSurBiscuit(){
        ^Balin:17: error: ')' expected but '}' found.
}
^